policies/constraints/base/https-only.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sHttpsOnly
metadata:
  name: ingress-https-only
spec:
  match:
    kinds:
      - apiGroups: [extensions, networking.k8s.io]
        kinds: [Ingress]
  parameters:
    tlsOptional: true
